--- a/app/src/main/res/layout/activity_add_agenda.xml
+++ b/app/src/main/res/layout/activity_add_agenda.xml
@@ -101,7 +101,7 @@
         android:id="@+id/btnConfirm"
         android:layout_width="68dp"
         android:layout_height="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="save"
@@ -123,7 +123,7 @@
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />
 
     <TextView
         android:id="@+id/textView"
@@ -181,7 +181,7 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/line4"
