--- a/app/src/main/res/layout/activity_add_agenda.xml
+++ b/app/src/main/res/layout/activity_add_agenda.xml
@@ -74,7 +74,7 @@
         android:text="2:30 PM"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+        app:layout_constraintTop_toBottomOf="@+id/swAllday" />
 
     <TextView
         android:id="@+id/tvEndTime"
@@ -137,7 +137,7 @@
         app:layout_constraintTop_toBottomOf="@+id/line1" />
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/swAllday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -173,6 +173,7 @@
         android:hint="Add location"
         android:inputType="textPersonName"
         android:textSize="18sp"
+        android:focusable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
