--- a/app/src/main/res/menu/more_menu.xml
+++ b/app/src/main/res/menu/more_menu.xml
@@ -2,12 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/filter_event"
 
-            android:title="abc" />
+            android:title="Event" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/filter_todo"
 
-            android:title="xyz" />
+            android:title="Todo" />
+        <item
+            android:id="@+id/filter_goal"
+
+            android:title="Goal" />
+        <item
+            android:id="@+id/filter_meeting"
+
+            android:title="Meeting" />
     </group>
 </menu>
