clean up library

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,7 +36,7 @@
                     app:hourHeight="60dp"
                     app:noOfVisibleDays="7"
                     app:showNowLine="true"
-                    app:nowLineColor="@color/colorAccent"
+                    app:nowLineColor="@color/gray"
                     app:nowLineThickness="4dp"
                     app:textSize="12dp"
                     app:eventTextColor="@color/white"/>
