--- a/app/src/main/res/menu/more_menu.xml
+++ b/app/src/main/res/menu/more_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/filter_event"
@@ -18,4 +19,9 @@
 
             android:title="Meeting" />
     </group>
+    <item
+        android:id="@+id/Today"
+        android:title="Today"
+        android:icon="@drawable/ic_today"
+        app:showAsAction="always"/>
 </menu>
