--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,5 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <group android:checkableBehavior="single">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group
+        android:id="@+id/nav_section_1"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_black"
+            android:title="Home"
+            android:checked="true"/>
+        <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_map_black"
+            android:title="Map" />
+        <item
+            android:id="@+id/nav_people"
+            android:icon="@drawable/ic_people_outline_black"
+            android:title="People"/>
+    </group>
+
+    <group
+        android:id="@+id/nav_section_2"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_new_event"
+            android:icon="@drawable/ic_add_black"
+            android:title="New event" />
+    </group>
+
+    <group
+        android:id="@+id/nav_section_3"
+        android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_setting"
+            android:icon="@drawable/ic_settings_black"
+            android:title="Setting" />
+        <item
+            android:id="@+id/nav_exit"
+            android:icon="@drawable/ic_help_outline_black"
+            android:title="Help &amp; feedback" />
     </group>
 </menu>
