--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
 
             <include layout="@layout/toolbar" />
             <!-- For fragments -->
-            <FrameLayout
+            <RelativeLayout
                 android:id="@+id/frame"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -39,8 +39,18 @@
                     app:nowLineColor="@color/gray"
                     app:nowLineThickness="4dp"
                     app:textSize="12dp"
-                    app:eventTextColor="@color/white"/>
-            </FrameLayout>
+                    app:eventTextColor="@color/white"
+                    app:newEventTimeResolutionInMinutes="15"
+                    app:dropListenerEnabled="true"/>
+                <TextView
+                    android:id="@+id/draggable_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:background="@color/colorAccent"
+                    android:padding="3dp"
+                    android:text="sticky" />
+            </RelativeLayout>
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
