--- a/app/src/main/res/layout/activity_agenda_detail.xml
+++ b/app/src/main/res/layout/activity_agenda_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.AgendaDetail.View">
+    tools:context=".View.EventDetail.View">
 
     <ImageView
         android:id="@+id/btnDetailEdit"
