--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,6 +37,8 @@
                     app:noOfVisibleDays="7"
                     app:showNowLine="true"
                     app:nowLineColor="@color/gray"
+                    app:dayBackgroundColor="#05000000"
+                    app:todayBackgroundColor="#1848adff"
                     app:nowLineThickness="4dp"
                     app:textSize="12dp"
                     app:eventTextColor="@color/white"
@@ -47,7 +49,9 @@
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/white"
                     android:background="@color/colorAccent"
-                    android:padding="3dp"
+                    android:padding="2dp"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
                     android:text="sticky" />
             </RelativeLayout>
         </LinearLayout>
