--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="event_color_04">#87d288</color>
     <color name="black">#000000</color>
     <color name="gray">#9e9e9e</color>
-    <color name="red">#ff1744</color>
+    <color name="red_material">#F44336</color>
+    <color name="green_material">#4CAF50</color>
 </resources>
