--- a/app/src/main/res/layout/activity_agenda_detail.xml
+++ b/app/src/main/res/layout/activity_agenda_detail.xml
@@ -136,13 +136,15 @@
 
     <TextView
         android:id="@+id/tvDetailLocation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:inputType="textMultiLine"
         android:text="Sample address, location"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDetailNote" />
 
